--- a/.github/workflows/controller.yml
+++ b/.github/workflows/controller.yml
@@ -3,14 +3,16 @@ name: Wine Temp Controller
 on:
   workflow_dispatch:
 
-# repo に state/ を commit & push するので必要
 permissions:
-  contents: write
+  contents: read
+  issues: write
 
-# 5分おきに外部から叩くので、重複実行を潰す（同時に走らない）
 concurrency:
   group: wine-temp-controller
   cancel-in-progress: true
+
+env:
+  GH_STATE_ISSUE_NUMBER: 1
 
 jobs:
   tick:
@@ -18,9 +20,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          persist-credentials: true
 
       - name: Install deps
         run: |
@@ -32,7 +31,6 @@ jobs:
 
       - name: Run planner and worker
         env:
-          # SwitchBotは repo secrets に入れておく（Settings → Secrets and variables → Actions）
           SWITCHBOT_TOKEN: ${{ secrets.SWITCHBOT_TOKEN }}
           SWITCHBOT_SECRET: ${{ secrets.SWITCHBOT_SECRET }}
           DEVICE_ID: ${{ secrets.DEVICE_ID }}
